--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+body,html {
+    margin: 0;
+    padding: 0;
+}
+* {
+    box-sizing: border-box;
+}
+
 :root {
   line-height: 1.5;
   font-weight: 400;
@@ -19,14 +27,6 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 button {
