--- a/src/index.css
+++ b/src/index.css
@@ -1,59 +1,29 @@
+@import "tailwindcss";
+
+@font-face {
+    font-family: "SourceCodePro";
+    src: url("../public/fonts/source-code-pro/SourceCodePro-VariableFont_wght.ttf") format('truetype');
+}
+@font-face {
+    font-family: "Jersey 10";
+    src: url("../public/fonts/jersey-10/Jersey10-Regular.ttf") format('truetype');
+}
+
+@theme {
+  --color-sky-purple: #5bdce1;
+  --color-dark-purple: #201139;
+  --color-isabelline: #f5f5ef;
+  --color-deep-lilac: #8454c4;
+  --color-american-silver: #c9cdd3;
+  --color-banana-yellow: #ffeb3a;
+  --color-blue-jeans: #5cace6;
+  --color-sea-serpent: #52babe;
+  --color-dark-pastel-purple: #9e6cde;
+  --font-base: "SourceCodePro", sans-serif;
+  --font-title: "Jersey 10", sans-serif;
+}
+
 html, body {
   margin: 0;
   overflow: hidden;
-}
-
-:root {
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
